--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,18 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('./fonts.css');
-@import url('./root.css');
+@import url("./fonts.css");
+@import url("./root.css");
 
 html {
-	font-feature-settings: 'cv02', 'cv03', 'cv04', 'cv11';
-	@apply text-slate-700;
+  font-feature-settings: "cv02", "cv03", "cv04", "cv11";
+  @apply text-slate-700;
 }
 
 pre,
 code {
-	/* @apply font-mono; */
-	@apply font-mono !important;
+  /* @apply font-mono; */
+  @apply font-mono !important;
 }
 
 h1,
@@ -22,5 +22,5 @@ h3,
 h4,
 h5,
 h6 {
-	/* @apply text-slate-900; */
+  /* @apply text-slate-900; */
 }
