--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@
 
 @import url("./fonts.css");
 @import url("./root.css");
+@import url("./docsearch.css");
 
 html {
   font-feature-settings: "cv02", "cv03", "cv04", "cv11";
